--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,22 @@
 server:
   port: 9090
+spring:
+  datasource:
+    url: jdbc:mysql://localhost:3306/sharedb?createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true&useSSL=false&useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    username: root
+    password: 12345678
+  jpa:
+    database: mysql
+    database-platform: org.hibernate.dialect.MySQL5Dialect
+    show-sql: false
+    hibernate:
+      ddl-auto: none
 
+
+
+#ADDITIONAL VALUES
+register:
+  content:
+    pageSize: 10
+# @ConfigurationProperties(prefix="register.content") // int pageSize
