--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -5,38 +5,6 @@ databaseChangeLog:
       author: ihor_biedin
       changes:
         - createTable:
-            tableName: users
-            columns:
-              - column:
-                  name: id
-                  type: BIGINT
-                  autoIncrement: true
-                  constraints:
-                    primaryKey: true
-                    nullable: false
-              - column:
-                  name: login
-                  type: varchar(50)
-                  constraints:
-                    unique: true
-                    nullable: false
-              - column:
-                  name: password
-                  type: varchar(100)
-                  constraints:
-                    nullable: false
-              - column:
-                  name: role_id
-                  type: BIGINT
-                  constraints:
-#                    foreignKeyName: fk_user_id
-#                    references: roles(id)
-                    nullable: false
-  - changeSet:
-      id: 2
-      author: ihor_biedin
-      changes:
-        - createTable:
             tableName: company_share
             columns:
               - column:
@@ -86,9 +54,15 @@ databaseChangeLog:
                   defaultValueComputed: CURRENT_TIMESTAMP
                   constraints:
                     nullable: false
+              - column:
+                  name: updated_at
+                  type: timestamp
+                  defaultValueComputed: CURRENT_TIMESTAMP
+                  constraints:
+                    nullable: false
 
   - changeSet:
-      id: 3
+      id: 2
       author: ihor_biedin
       changes:
         - createTable:
@@ -105,6 +79,38 @@ databaseChangeLog:
                   name: role
                   type: varchar(10)
                   constraints:
+                    nullable: false
+  - changeSet:
+      id: 3
+      author: ihor_biedin
+      changes:
+        - createTable:
+            tableName: users
+            columns:
+              - column:
+                  name: id
+                  type: BIGINT
+                  autoIncrement: true
+                  constraints:
+                    primaryKey: true
+                    nullable: false
+              - column:
+                  name: login
+                  type: varchar(50)
+                  constraints:
+                    unique: true
+                    nullable: false
+              - column:
+                  name: password
+                  type: varchar(100)
+                  constraints:
+                    nullable: false
+              - column:
+                  name: role_id
+                  type: BIGINT
+                  constraints:
+                    foreignKeyName: fk_user_id
+                    references: roles(id)
                     nullable: false
 
   - changeSet:
