--- a/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -1,13 +1,18 @@
 {
   "properties": [
     {
-      "name": "register.content.pageSize",
-      "type": "java.lang.String",
-      "description": "Temporal test ;)."
-    },
-    {
       "name": "sharedb",
       "type": "java.lang.String",
       "description": "Set TRUE if you want to initialize your db with testing data."
+    },
+    {
+      "name": "jwt.token.secret",
+      "type": "java.lang.String",
+      "description": "Secret key word for JWT Token."
+    },
+    {
+      "name": "jwt.token.expired",
+      "type": "java.lang.Long",
+      "description": "Expiring time for JWT Token."
     }
   ] }
